--- a/style.css
+++ b/style.css
@@ -2,99 +2,177 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    font-family: 'Lato', sans-serif;
 }
 
 .header {
-    background: black;
-    height: 120px;
-    margin: 10px;
+    height: 80px;
+    background-color: #0B0C10;
     display: flex;
-    justify-content: space-around;
     align-items: center;
+    justify-content: space-around;
 }
 
-.ticket-filter {
-    background: grey;
-    height: 35%;
+.tickets-filter {
+    height: 60%;
     width: 30%;
-    margin: 50px;
-    padding: 10px;
-    display: flex;
-    justify-content: space-evenly;
     border-radius: 10px;
+    background: #b2bec3;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .filter {
-    height: 20px;
-    width: 30px;
-    border-radius: 10px;
-    opacity: 0.6;
-    transition: transform 0.5s;
-    
-
+    height: 40%;
+    width: 8%;
+    opacity: 0.8;
+    border-radius: 5px;
+    transition: transform 0.5s; 
 }
-.filter:hover{
+
+.filter:hover {
     opacity: 1;
-    transform:scale(1.3);
+    transform: scale(1.2); 
 }
 
 .red {
-    background: red;
+    background-color: #d63031;
 }
 
 .green {
-    background: green;
-    
+    background-color: #00b894;
+}
+.blue {
+    background-color: #0984e3;
 }
 
-.blue {
-   
-    background: blue;
-}
 
 .yellow {
-    
-    background: yellow;
+    background-color: #fdcb6e;
 }
 
 .black {
-   
-    background: black;
+    background-color: #2d3436;
 }
 
 .ticket-actions {
-    background: gray;
-    height: 35%;
-    width: 15%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    height: 60%;
+    width: 8%;
+    background-color: #b2bec3;
     border-radius: 10px;
-    margin: 20px;
+    display: flex;
 }
 
 .ticket-actions div {
-    background: gray;
     height: 100%;
     width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
-    margin: 20px;
 }
-    
 
-.ticket-actions div:hover{
-    background-color: lightblue;
+.ticket-actions div:hover {
+    background-color: #636e72;
 }
 
 .ticket-actions i {
-    font-size: 30px;
-   
+    font-size: 20px;
+    color: #2d3436;
 }
 
-.ticket-container {
-    
-    height: calc( 100vh - 120px );
+.tickets-container {
+    height: calc( 100vh - 80px );
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: flex-start;
+    grid-gap: 30px;
+}
+
+.ticket-modal {
+    position: absolute;
+    top: 35%;
+    height: 300px;
+    width: 400px;
+    display: flex;
+    left: calc(50vw - 200px);
+}
+
+.ticket-text {
+    width: 70%;
+    background-color: #b2bec3;
+    outline: none;
+    padding: 15px;
+    font-size: 25px;
+    overflow: auto;
+}
+
+.ticket-filters {
+    width: 30%;
+    background-color: #0B0C10;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.ticket-filter {
+    height: 10%;
+    width: 60%;
+    opacity: 0.5;
+}
+
+.ticket-filter:hover {
+    opacity: 1;
+}
+
+.selected-filter {
+    border: 3px solid white;
+    opacity: 1;
+}
+
+.ticket {
+    height: 150px;
+    width: 250px;
+    border: 1px solid lightgray;
+}
+
+.ticket-header {
+    height: 10%;
+}
+
+.ticket-content {
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+}
+
+.ticket-info {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.ticket-info div {
+}
+
+.ticket-value {
+    height: 80%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    word-break: break-all;
+}
+
+.active-filter{
+    border: 2px solid white;
+    opacity: 1;
+    transform: scale(1.2);
 }
